partiql-beamline-sim/tests/snapshots/error__unknown_immediate.snap
---
source: partiql-beamline-sim/tests/error.rs
expression: output
---
  × Error in process configuration

Error:   × Unknown Immediate of Ion type `blob`
   ╭─[unknown_immediate.script:5:24]
 4 │                 sensor: rand_process::{
 5 │ ╭─▶                 $data: {
 6 │ │                       err: {{ }},
 7 │ ╰─▶                 }
 8 │                 }
   ╰────
