partiql-beamline-sim/tests/snapshots/error__unsupported_anchors.snap
---
source: partiql-beamline-sim/tests/error.rs
expression: output
---
  × Error in process configuration

Error: 
  × `Regex` Generator Configuration
  ╰─▶   × Regex Error: Unsupported Regex: Look-around not supported for data generation
         ╭─[unsupported_anchors.script:8:40]
       7 │             $data: {
       8 │                 bad: Regex::{ pattern: "^some val \\d{1,4}$" },
         ·                                        ─────────────────────
       9 │             }
         ╰────
