partiql-beamline-sim/tests/snapshots/error__unsupported_lookaround.snap
---
source: partiql-beamline-sim/tests/error.rs
expression: output
---
  × Error in process configuration

Error:   × `Regex` Generator Configuration
  ╰─▶   × Regex Error: Unsupported Regex: Look-around not supported for data generation
         ╭─[unsupported_lookaround.script:8:40]
       7 │             $data: {
       8 │                 bad: Regex::{ pattern: "^some val \\b\\d{1,4}\\b$" },
         ·                                        ───────────────────────────
       9 │             }
         ╰────
